--- a/package.json
+++ b/package.json
@@ -19,9 +19,14 @@
     "@opentelemetry/exporter-metrics-otlp-grpc": "^0.45.1",
     "@opentelemetry/exporter-trace-otlp-grpc": "^0.45.1",
     "@opentelemetry/id-generator-aws-xray": "^1.2.1",
+    "@opentelemetry/instrumentation-aws-sdk": "^0.37.0",
+    "@opentelemetry/instrumentation-http": "^0.45.1",
     "@opentelemetry/propagator-aws-xray": "^1.3.1",
+    "@opentelemetry/resource-detector-aws": "^1.3.4",
+    "@opentelemetry/resources": "^1.18.1",
     "@opentelemetry/sdk-metrics": "^1.18.1",
     "@opentelemetry/sdk-node": "^0.45.1",
+    "@opentelemetry/semantic-conventions": "^1.18.1",
     "elysia": "^0.7.29"
   }
 }
