Rewrite updater to use mysql instead Add prisma Remove instrumentation code because fuck me xray is expensive

--- a/trade-api/Dockerfile
+++ b/trade-api/Dockerfile
@@ -26,5 +26,7 @@ WORKDIR /home/bun/app
 
 COPY package.json .
 COPY dist/updater.js .
+COPY prisma/ prisma/
+COPY src/generated/client/libquery_engine-debian-openssl-3.0.x.so.node src/generated/client/
 
 CMD ["bun", "run", "updater.js"]
