Add scrapper for pulling data from trade api and putting it in S3 Change updater to load data from S3 instead

--- a/package.json
+++ b/package.json
@@ -12,5 +12,9 @@
   "workspaces": [
     "infra",
     "trade-api"
-  ]
+  ],
+  "dependencies": {
+    "@aws-sdk/client-ecs": "^3.484.0",
+    "@aws-sdk/client-s3": "^3.484.0"
+  }
 }
