--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
     "name": "mirrored-poe-trade",
     "module": "index.ts",
-    "version": "1.0.63",
+    "version": "1.0.73",
     "type": "module",
     "scripts": {
-        "start:updater": "bun run src/updater.ts",
-        "start:scrapper": "bun run src/scrapper.ts",
+        "dev:updater": "bun run src/updater.ts",
+        "dev:scrapper": "bun run src/scrapper.ts",
         "build:updater": "bun build src/updater.ts --outfile=src/updater.js --target=bun",
         "build:scrapper": "bun build src/scrapper.ts --outfile=src/scrapper.js --target=bun",
         "build:api": "bun build src/api.ts --outfile=src/api.js --target=bun",
